# openease

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  app_and_db.py  baseimage_dockerfile  docker-compose.yml  requirements.txt  runserver.py  update-texture-reference  utility.py  wait.sh
config/: nginx.tmpl  settings.py
default_files/: default_neem_overview_data.json  default_overview_data.json  default_publications_data.json
docker/: docker_application.py
helpers/: background_scheduler.py  file_handler.py  thread_handler.py  threading.py  utility.py
knowrob/: container.py  queries.py
knowrob/rules/: package.xml
knowrob/rules/src/: __init__.pl  editor.pl  neems.pl  openease.pl  query_handler.pl  query_history.pl
knowrob/rules/src/data_vis/: __init__.pl  canvas.pl  distribution.pl  graph.pl  hierachy.pl  hierarchy.pl  plot.pl  table.pl  timeline.pl  tree.pl
knowrob/rules/src/marker_vis/: __init__.pl  camera.pl  highlight.pl  mesh.pl  trajectory.pl  video.pl  vis.pl
models/: tutorials.py  users.py
neems/: neem.py  neemhub.py
overview-contents/: README.md
pages/: api.py  content.py  editor.py  main.py  meshes.py  neem_discovery.py  neem_overview.py  news.py  oauth.py  overview.py  postgres.py  publications.py  sql_pages.py  tutorials.py
postgres/: AlchemyEncoder.py  content.py  db.py  settings.py  teaching.py  users.py
startup/: init_app.py
static/: example-queries.yaml  index.js  package.json
templates/: base.html  invalid_settings.html  main.html  openease_base.html
tutorials/: openease.md  (+2 more)
(+244 files in other folders)
